Corrige erro de digitação

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -7,4 +7,4 @@ pipeline:
   test:
     image: phpdockerio/php80-cli
     commands:
-    - vendor/bin/phpunit --textdox
+    - vendor/bin/phpunit --testdox
